--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1097,4 +1097,7 @@
     </string-array>
 
     <string name="offline_empty_folder" context="Text that indicates that a the offline section is currently empty">No files Saved for Offline</string>
+
+    <string name="general_enable" context="Positive confirmation to enable logs">Enable</string>
+    <string name="enable_log_text_dialog" context="Dialog to confirm the action of enabling logs">Logs can contain information related to your account</string>
 </resources>
