--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1102,4 +1102,6 @@
 
     <string name="confirmation_to_reconnect" context="Dialog to confirm the reconnect action">Network connection recovered. Connect to MEGA?</string>
     <string name="loading_status" context="Message shown meanwhile the app is waiting for a the chat status">Loading status&#8230;</string>
+
+    <string name="error_editing_message" context="Error when a message cannot be edited">This message cannot be edited</string>
 </resources>
