QA report #6602 - Sentence "contact is typing" with no right margin when contact has a long name

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1042,10 +1042,11 @@
     <string name="no_conversation_history" context="message shown when a chat has no messages">No conversation history</string>
 
     <plurals name="user_typing" context="title of confirmation alert before removing a contact">
-        <item context="one" quantity="one"> is typing...</item>
-        <item context="two" quantity="two"> are typing...</item>
-        <item context="other" quantity="other"> more are typing</item>
+        <item context="Singular" quantity="one">is typing...</item>
+        <item context="Plural" quantity="other">are typing...</item>
     </plurals>
+
+    <string name="more_users_typing" context="Title of the general tab in My Account Section">more are typing...</string>
 
     <string name="tab_my_account_general" context="Title of the general tab in My Account Section">General</string>
     <string name="tab_my_account_storage" context="Title of the storage tab in My Account Section">Storage</string>
