--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -265,7 +265,7 @@
     <string name="download_began" context="message when the download starts">Download has started</string>
     <string name="download_cancel_downloading" context="Confirmation text when attempting to cancel the download">Do you want to cancel the download?</string>
     <string name="download_touch_to_cancel" context="Hint how to cancel the download">Touch to cancel download</string>
-    <string name="download_touch_to_show" context="Hint how to cancel the download">Touch to show all the transfers</string>
+    <string name="download_touch_to_show" context="Hint how to cancel the download">View transfers</string>
     <string name="error_file_size_greater_than_4gb" context="Warning message">Most devices can\'t download files greater than 4GB. Your download will probably fail</string>
     <string name="intent_not_available" context="message when trying to open a downloaded file but there isn\'t any app that open that file. Example: a user downloads a pdf but doesn\'t have any app to read a pdf">There isn\'t any available app to execute this file on your device</string>
 
@@ -1144,6 +1144,10 @@
         <item context="Plural" quantity="other">Uploaded %1$d files</item>
     </plurals>
 
-
     <string name="general_total_size" context="label for the total file size of multiple files and/or folders (no need to put the colon punctuation in the translation)" formatted="false">Total size: %1$s</string>
+
+    <plurals name="upload_service_failed" context="Text of the notification shown when the upload service has finished with any transfer error">
+        <item context="Singular" quantity="one">%1$d file failed</item>
+        <item context="Plural" quantity="other">%1$d files failed</item>
+    </plurals>
 </resources>
