--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1147,7 +1147,7 @@
     <string name="general_total_size" context="label for the total file size of multiple files and/or folders (no need to put the colon punctuation in the translation)" formatted="false">Total size: %1$s</string>
 
     <plurals name="upload_service_failed" context="Text of the notification shown when the upload service has finished with any transfer error">
-        <item context="Singular" quantity="one">%1$d file failed</item>
-        <item context="Plural" quantity="other">%1$d files failed</item>
+        <item context="Singular" quantity="one">%1$d file not uploaded</item>
+        <item context="Plural" quantity="other">%1$d files not uploaded</item>
     </plurals>
 </resources>
