--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,7 +79,7 @@
     <string name="action_refresh" context="Menu item">Refresh</string>
     <string name="action_sort_by" context="Menu item">Sort by</string>
     <string name="action_help" context="Menu item">Help</string>
-    <string name="action_upgrade_account" context="Change from a free account to paying MEGA">Upgrade your account</string>
+    <string name="action_upgrade_account" context="Change from a free account to paying MEGA">Upgrade account</string>
     <string name="upgrading_account_message" context="Message while proceeding to upgrade the account">Upgrading account</string>
     <string name="action_select_all" context="Menu item to select all the elements of a list">Select all</string>
     <string name="action_unselect_all" context="Menu item to unselect all the elements of a list">Clear selection</string>
@@ -1165,4 +1165,11 @@
         <item context="Singular" quantity="one">Downloading %1$d of %2$d file</item>
         <item context="Plural" quantity="other">Downloading %1$d of %2$d files</item>
     </plurals>
+
+    <string name="title_depleted_transfer_overquota" context="Title of the alert when the transfer quota is depleted">Depleted transfer quota</string>
+    <string name="text_depleted_transfer_overquota" context="Text of the alert when the transfer quota is depleted">Your queued download exceeds the current transfer quota available for your IP address  and may therefore be interrupted.</string>
+    <string name="button_depleted_transfer_overquota" context="Button to hide the alert when the transfer quota is depleted">Continue without account</string>
+    <string name="plans_depleted_transfer_overquota" context="Button to show plans in the alert when the transfer quota is depleted">See our plans</string>
+
+
 </resources>
