--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1179,4 +1179,7 @@
     <string name="add_to_cloud" context="Menu option">Add to Cloud Drive</string>
     <string name="save_for_offline" context="Menu option">Save for Offline</string>
     <string name="general_revoke" context="Menu option">Revoke</string>
+
+    <string name="import_success_message" context="Menu option">Succesfully added to Cloud Drive</string>
+    <string name="import_success_error" context="Menu option">Error. Not added to Cloud Drive</string>
 </resources>
